# asset-management-service/docs/swagger.json
@@ -77,7 +77,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entity.ScheduledTransaction"
+                            "$ref": "#/definitions/entity.ScheduledTransactionRequest"
                         }
                     }
                 ],
@@ -199,30 +199,34 @@
         }
     },
     "definitions": {
-        "entity.ScheduledTransaction": {
+        "entity.ScheduledTransactionRequest": {
             "type": "object",
+            "required": [
+                "amount",
+                "asset_name",
+                "execute_time",
+                "from_wallet_id",
+                "to_wallet_id"
+            ],
             "properties": {
                 "amount": {
+                    "description": "Amount to transfer",
                     "type": "number"
                 },
-                "created_at": {
+                "asset_name": {
+                    "description": "Asset to transfer",
                     "type": "string"
                 },
                 "execute_time": {
-                    "description": "When this should be executed",
-                    "type": "string"
-                },
-                "from_wallet": {
+                    "description": "Execution time (Unix timestamp)",
                     "type": "integer"
                 },
-                "id": {
+                "from_wallet_id": {
+                    "description": "Sender wallet",
                     "type": "integer"
                 },
-                "status": {
-                    "description": "\"scheduled\", \"executed\"",
-                    "type": "string"
-                },
-                "to_wallet": {
+                "to_wallet_id": {
+                    "description": "Receiver wallet",
                     "type": "integer"
                 }
             }
@@ -231,12 +235,17 @@
             "type": "object",
             "required": [
                 "amount",
+                "asset_name",
                 "wallet_id"
             ],
             "properties": {
                 "amount": {
                     "description": "Transaction amount",
                     "type": "number"
+                },
+                "asset_name": {
+                    "description": "Asset being transacted (e.g., BTC, ETH)",
+                    "type": "string"
                 },
                 "wallet_id": {
                     "description": "Wallet performing the transaction",
@@ -248,6 +257,7 @@
             "type": "object",
             "required": [
                 "amount",
+                "asset_name",
                 "from_wallet_id",
                 "to_wallet_id"
             ],
@@ -255,6 +265,10 @@
                 "amount": {
                     "description": "Transfer amount",
                     "type": "number"
+                },
+                "asset_name": {
+                    "description": "Asset being transferred",
+                    "type": "string"
                 },
                 "from_wallet_id": {
                     "description": "Sender wallet",
